@@ -13,12 +13,12 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-parent</artifactId>
-        <version>20.2</version>
+        <version>24</version>
         <relativePath />
     </parent>
 
     <artifactId>powsybl-dynawo</artifactId>
-    <version>2.10.0-SNAPSHOT</version>
+    <version>3.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>powsybl dynawo</name>
@@ -54,11 +54,12 @@
         <module>dynawo-algorithms</module>
         <module>distribution</module>
         <module>dynawo-contingencies</module>
+        <module>dynawo-extensions</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
-        <powsybl-core.version>6.8.0</powsybl-core.version>
+        <java.version>21</java.version>
+        <powsybl-core.version>7.1.0</powsybl-core.version>
         <groovy.version>4.0.26</groovy.version> <!-- used for groovy-json but also for groovydoc (dynawo-dsl) -->
         <asciitable.version>0.3.2</asciitable.version>
         <jackson.version>2.17.1</jackson.version>
@@ -67,9 +68,21 @@
             ../../distribution/target/site/jacoco-aggregate/jacoco.xml
         </sonar.coverage.jacoco.xmlReportPaths>
         <argLine/> <!--  This is required for later correct replacement of argline -->
+        <!-- Other variables -->
+        <enable-dynamic-agent-loading.argLine/>
     </properties>
 
     <profiles>
+        <profile>
+            <id>java21+</id>
+            <activation>
+                <jdk>[21,)</jdk>
+            </activation>
+            <properties>
+                <!-- In Java 21+, we have to add a parameter to allow dynamic agent loading (cf. powsybl-parent) -->
+                <enable-dynamic-agent-loading.argLine>-XX:+EnableDynamicAgentLoading</enable-dynamic-agent-loading.argLine>
+            </properties>
+        </profile>
         <profile>
             <id>release</id>
             <activation>
@@ -105,20 +118,21 @@
             <modules>
                 <module>dynawo-integration-tests</module>
             </modules>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <!-- Argument added to set the default locale as en_US for unit tests run to be independent of the JVM locale -->
-                            <argLine>@{argLine} -Duser.language=en -Duser.region=US</argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
         </profile>
     </profiles>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <!-- Argument added to set the default locale as en_US for unit tests run to be independent of the JVM locale -->
+                    <argLine>@{argLine} -Duser.language=en -Duser.region=US ${enable-dynamic-agent-loading.argLine}</argLine>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencyManagement>
         <dependencies>
@@ -129,7 +143,6 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
             <dependency>
                 <groupId>${project.groupId}</groupId>
                 <artifactId>powsybl-dynawo-commons</artifactId>
@@ -187,7 +200,21 @@
                 <artifactId>powsybl-dynawo-integration-tests</artifactId>
                 <version>${project.version}</version>
             </dependency>
-
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>powsybl-dynawo-extensions-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>powsybl-dynawo-extensions-impl</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>powsybl-dynawo-extensions-serde</artifactId>
+                <version>${project.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.groovy</groupId>
                 <artifactId>groovy-json</artifactId>
@@ -205,5 +232,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-
 </project>
